--- a/client/index.html
+++ b/client/index.html
@@ -42,10 +42,17 @@
 	<!-- Inicio [menu_adm] -->
 	<div class="menu_adm" style="display: none;">
 		<a class="btn btn_morto_mesa" href="#" onclick="return morto_mesa();">Morto para mesa</a>
-		<a class="btn btn_continuar" href="#" onclick="return proxima();">Próxima</a>
+		<a class="btn btn_continuar" href="#" onclick="return proxima();">Próxima partida</a>
 		<a class="btn btn_terminar" href="#" onclick="return terminar();">Terminar</a>
 	</div>
 	<!-- Fim [menu_adm] -->
+
+	<!-- Inicio [audios] -->
+	<div style="display: none;">
+		<audio class="audio_atencao" src="client/audio/atencao.mp3"></audio>
+	</div>
+	<!-- Fim [audios] -->
+
 
  <!-- Inicio [jogo] -->
 	<div class="jogo" style="display: none;">
