--- a/client/index.html
+++ b/client/index.html
@@ -120,6 +120,7 @@
 
 		<span class="player_jogo_deck" title="Jogo baixado"></span>
 		<span class="mesa_deck" title="Cartas da mesa"></span>
+		<span class="display_cartas" onclick="display_cartas();"></span>
 		<!--<span class="display_cartas" onclick="display_cartas();"><img src="client/imgs/cartas.svg" /></span>-->
 	</div>
 	<!-- Fim [jogo] -->
