--- a/client/index.html
+++ b/client/index.html
@@ -101,6 +101,9 @@
 	<!-- Inicio [audios] -->
 	<div style="display: none;">
 		<audio class="audio_atencao" src="client/audio/atencao.mp3"></audio>
+		<audio class="audio_comprar_baralho" src="client/audio/comprar_baralho.mp3"></audio>
+		<audio class="audio_comprar_mesa" src="client/audio/comprar_mesa.mp3"></audio>
+		<audio class="audio_baixar_jogo" src="client/audio/baixar_jogo.mp3"></audio>
 	</div>
 	<!-- Fim [audios] -->
 
