--- a/client/index.html
+++ b/client/index.html
@@ -107,6 +107,9 @@
 	</div>
 	<!-- Fim [audios] -->
 
+	<!-- Inicio [lightbox] -->
+	<div id="alerta" class="lightbox" style="display: none;"></div>
+	<!-- Fim [lightbox] -->
 
  <!-- Inicio [jogo] -->
 	<div class="jogo" style="display: none;">
