--- a/client/index.html
+++ b/client/index.html
@@ -32,8 +32,8 @@
 
  <!-- Inicio [lobby] -->
 	<div class="lobby">
-		<a class="btn" href="#" onclick="return sala_cria();">Criar Sala</a>
-		<a class="btn" href="#" onclick="return retomar();">Retomar</a>
+		<a class="btn btn_azul" href="#" onclick="return sala_cria();">Criar Sala</a>
+		<a class="btn btn_azul" href="#" onclick="return retomar();">Retomar</a>
 		<!--<a class="btn" href="#" onclick="return editar_deck();">Editar baralho</a>-->
 		<br/>
 		<input type="text" id="player_nome" name="nome" value="">
@@ -96,9 +96,9 @@
 
 	<!-- Inicio [menu_adm] -->
 	<div class="menu_adm" style="display: none;">
-		<a class="btn btn_morto_mesa" href="#" onclick="return morto_mesa();">Morto para mesa</a>
-		<a class="btn btn_continuar" href="#" onclick="return resumo();">Próxima partida</a>
-		<a class="btn btn_terminar" href="#" onclick="return terminar();">Terminar</a>
+		<a class="btn btn_azul btn_morto_mesa" href="#" onclick="return morto_mesa();">Morto para mesa</a>
+		<a class="btn btn_azul btn_continuar" href="#" onclick="return resumo();">Próxima partida</a>
+		<a class="btn btn_vermelho btn_terminar" href="#" onclick="return terminar();">Terminar</a>
 	</div>
 	<!-- Fim [menu_adm] -->
 
