--- a/client/index.html
+++ b/client/index.html
@@ -52,6 +52,7 @@
 		<input type="hidden" id="hearts_fg" value="#ff0000">
 		<input type="hidden" id="clubs_bg" value="#ffffff">
 		<input type="hidden" id="clubs_fg" value="#444444">
+		<input type="hidden" id="joker" value="0">
 
 		<span class="wrap_top">
 			<span class="logo"><img src="client/imgs/logo.svg" width="300"></span>
@@ -69,6 +70,14 @@
 
 	<!-- Inicio [editar_deck_janela] -->
 	<div class="editar_deck_janela" title="Editar baralho" style="display: none;">
+		<br/>
+		<span class="out_joker">
+			<label class="switch">
+				<input class="joker" type="checkbox">
+				<span class="slider"></span>
+			</label>
+			Joker
+	</span>
 		<br/>
 		<div class="out_feltro"><input type="text" class="feltro" value="#1FAB90" /> Cor da Mesa</div>
 		<br/>
